# ColorChalks

./: CONTRIBUTING.md  README.md  T_colors.py  setup.cfg
.github/workflows/: greetings.yml
src/ColorChalks/: ColorChalks.py
src/ColorChalks.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/tcolor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test1.py
