[metadata]
name = tcolor
version = 1.0.0
author = Sagar-Sharma-7
author_email = 6969sagarsharma@gmail.com
description = You can use different foreground and background colors in terminal using tcolor module.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sagar-Sharma-7/T_colors
project_urls =
    Bug Tracker = https://github.com/Sagar-Sharma-7/T_colors/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src